fix: Fix page display issues RtuQ/howe-blog@3f0b14e77b53bac5ed41f029c4c6022126af6fec

--- a/404.html
+++ b/404.html
@@ -9,16 +9,16 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="Howe">
-<link rel="canonical" href="hoewblogs.top/404.html">
-<link crossorigin="anonymous" href="hoewblogs.top/assets/css/stylesheet.d6fcd20a4fb86efa4dfac8ec95da60244cc8871042183da1ef28e3a762ad79c8.css" integrity="sha256-1vzSCk&#43;4bvpN&#43;sjsldpgJEzIhxBCGD2h7yjjp2Ktecg=" rel="preload stylesheet" as="style">
-<link rel="icon" href="hoewblogs.top/%3Clink%20/%20abs%20url%3E">
-<link rel="icon" type="image/png" sizes="16x16" href="hoewblogs.top/%3Clink%20/%20abs%20url%3E">
-<link rel="icon" type="image/png" sizes="32x32" href="hoewblogs.top/%3Clink%20/%20abs%20url%3E">
-<link rel="apple-touch-icon" href="hoewblogs.top/%3Clink%20/%20abs%20url%3E">
-<link rel="mask-icon" href="hoewblogs.top/%3Clink%20/%20abs%20url%3E">
+<link rel="canonical" href="/404.html">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.d6fcd20a4fb86efa4dfac8ec95da60244cc8871042183da1ef28e3a762ad79c8.css" integrity="sha256-1vzSCk&#43;4bvpN&#43;sjsldpgJEzIhxBCGD2h7yjjp2Ktecg=" rel="preload stylesheet" as="style">
+<link rel="icon" href="/%3Clink%20/%20abs%20url%3E">
+<link rel="icon" type="image/png" sizes="16x16" href="/%3Clink%20/%20abs%20url%3E">
+<link rel="icon" type="image/png" sizes="32x32" href="/%3Clink%20/%20abs%20url%3E">
+<link rel="apple-touch-icon" href="/%3Clink%20/%20abs%20url%3E">
+<link rel="mask-icon" href="/%3Clink%20/%20abs%20url%3E">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="hoewblogs.top/404.html">
+<link rel="alternate" hreflang="en" href="/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -55,7 +55,7 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="hoewblogs.top/404.html">
+</noscript><meta property="og:url" content="/404.html">
   <meta property="og:site_name" content="Howe&#39;s Blog">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="en-us">
@@ -81,7 +81,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="hoewblogs.top/" accesskey="h" title="Howe&#39;s Blog (Alt + H)">
+            <a href="/" accesskey="h" title="Howe&#39;s Blog (Alt + H)">
                 <img src="/apple-touch-icon.png" alt="" aria-label="logo"
                     height="35">Howe&#39;s Blog</a>
             <div class="logo-switches">
@@ -109,22 +109,22 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="hoewblogs.top/archives" title="Archives">
+                <a href="/archives" title="Archives">
                     <span>Archives</span>
                 </a>
             </li>
             <li>
-                <a href="hoewblogs.top/categories/" title="Categories">
+                <a href="/categories/" title="Categories">
                     <span>Categories</span>
                 </a>
             </li>
             <li>
-                <a href="hoewblogs.top/search/" title="Search (Alt &#43; /)" accesskey=/>
+                <a href="/search/" title="Search (Alt &#43; /)" accesskey=/>
                     <span>Search</span>
                 </a>
             </li>
             <li>
-                <a href="hoewblogs.top/tags/" title="Tags">
+                <a href="/tags/" title="Tags">
                     <span>Tags</span>
                 </a>
             </li>
@@ -136,7 +136,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="hoewblogs.top/">Howe&#39;s Blog</a></span> · 
+        <span>&copy; 2025 <a href="/">Howe&#39;s Blog</a></span> · 
 
     <span>
         Powered by
