--- a/search/index.html
+++ b/search/index.html
@@ -9,17 +9,17 @@
 <meta name="keywords" content="">
 <meta name="description" content="Search - Howe&#39;s Blog">
 <meta name="author" content="Howe">
-<link rel="canonical" href="hoewblogs.top/search/">
-<link crossorigin="anonymous" href="hoewblogs.top/assets/css/stylesheet.d6fcd20a4fb86efa4dfac8ec95da60244cc8871042183da1ef28e3a762ad79c8.css" integrity="sha256-1vzSCk&#43;4bvpN&#43;sjsldpgJEzIhxBCGD2h7yjjp2Ktecg=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
-<script defer crossorigin="anonymous" src="hoewblogs.top/assets/js/search.54afeae09605b61b886fb05bb6c9fa48593e3b12d64dbe8c137b738de2af15b3.js" integrity="sha256-VK/q4JYFthuIb7Bbtsn6SFk&#43;OxLWTb6ME3tzjeKvFbM="></script>
-<link rel="icon" href="hoewblogs.top/%3Clink%20/%20abs%20url%3E">
-<link rel="icon" type="image/png" sizes="16x16" href="hoewblogs.top/%3Clink%20/%20abs%20url%3E">
-<link rel="icon" type="image/png" sizes="32x32" href="hoewblogs.top/%3Clink%20/%20abs%20url%3E">
-<link rel="apple-touch-icon" href="hoewblogs.top/%3Clink%20/%20abs%20url%3E">
-<link rel="mask-icon" href="hoewblogs.top/%3Clink%20/%20abs%20url%3E">
+<link rel="canonical" href="/search/">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.d6fcd20a4fb86efa4dfac8ec95da60244cc8871042183da1ef28e3a762ad79c8.css" integrity="sha256-1vzSCk&#43;4bvpN&#43;sjsldpgJEzIhxBCGD2h7yjjp2Ktecg=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<script defer crossorigin="anonymous" src="/assets/js/search.54afeae09605b61b886fb05bb6c9fa48593e3b12d64dbe8c137b738de2af15b3.js" integrity="sha256-VK/q4JYFthuIb7Bbtsn6SFk&#43;OxLWTb6ME3tzjeKvFbM="></script>
+<link rel="icon" href="/%3Clink%20/%20abs%20url%3E">
+<link rel="icon" type="image/png" sizes="16x16" href="/%3Clink%20/%20abs%20url%3E">
+<link rel="icon" type="image/png" sizes="32x32" href="/%3Clink%20/%20abs%20url%3E">
+<link rel="apple-touch-icon" href="/%3Clink%20/%20abs%20url%3E">
+<link rel="mask-icon" href="/%3Clink%20/%20abs%20url%3E">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="hoewblogs.top/search/">
+<link rel="alternate" hreflang="en" href="/search/">
 <noscript>
     <style>
         #theme-toggle,
@@ -56,7 +56,7 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="hoewblogs.top/search/">
+</noscript><meta property="og:url" content="/search/">
   <meta property="og:site_name" content="Howe&#39;s Blog">
   <meta property="og:title" content="Search">
   <meta property="og:locale" content="en-us">
@@ -75,7 +75,7 @@
       "@type": "ListItem",
       "position":  1 ,
       "name": "Search",
-      "item": "hoewblogs.top/search/"
+      "item": "/search/"
     }
   ]
 }
@@ -101,14 +101,14 @@
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "hoewblogs.top/search/"
+    "@id": "/search/"
   },
   "publisher": {
     "@type": "Organization",
     "name": "Howe's Blog",
     "logo": {
       "@type": "ImageObject",
-      "url": "hoewblogs.top/%3Clink%20/%20abs%20url%3E"
+      "url": "/%3Clink%20/%20abs%20url%3E"
     }
   }
 }
@@ -130,7 +130,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="hoewblogs.top/" accesskey="h" title="Howe&#39;s Blog (Alt + H)">
+            <a href="/" accesskey="h" title="Howe&#39;s Blog (Alt + H)">
                 <img src="/apple-touch-icon.png" alt="" aria-label="logo"
                     height="35">Howe&#39;s Blog</a>
             <div class="logo-switches">
@@ -158,22 +158,22 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="hoewblogs.top/archives" title="Archives">
+                <a href="/archives" title="Archives">
                     <span>Archives</span>
                 </a>
             </li>
             <li>
-                <a href="hoewblogs.top/categories/" title="Categories">
+                <a href="/categories/" title="Categories">
                     <span>Categories</span>
                 </a>
             </li>
             <li>
-                <a href="hoewblogs.top/search/" title="Search (Alt &#43; /)" accesskey=/>
-                    <span>Search</span>
+                <a href="/search/" title="Search (Alt &#43; /)" accesskey=/>
+                    <span class="active">Search</span>
                 </a>
             </li>
             <li>
-                <a href="hoewblogs.top/tags/" title="Tags">
+                <a href="/tags/" title="Tags">
                     <span>Tags</span>
                 </a>
             </li>
@@ -200,7 +200,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="hoewblogs.top/">Howe&#39;s Blog</a></span> · 
+        <span>&copy; 2025 <a href="/">Howe&#39;s Blog</a></span> · 
 
     <span>
         Powered by
